--- a/views/food_new1.ejs
+++ b/views/food_new1.ejs
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -46,25 +47,14 @@
         margin-bottom: 30px;
         font-weight: 600;
       }
-      .line {
-        border-style: solid;
-        border-width: 1px;
-        border-left-width: 0;
-        border-right-width: 0;
-        border-bottom-width: 0;
-        margin: 0 auto 28px;
+      .snack-list {
+        margin: 25px;
       }
-      .snack {
-        display: flex;
-        justify-content: space-around;
+      .snack-list span {
+        display: inline-block;
+        margin: 8px 10px;
+        color: black;
         text-align: center;
-      }
-      .snack_menu {
-        text-align: center;
-        padding-left: 50px;
-      }
-      .snack_menu li {
-        list-style: none;
       }
       .food_name {
         display: flex;
@@ -204,35 +194,29 @@
       </div>
     </div>
 
-    <div class="titles">매점</div>
-    <div class="line"></div>
-    <div class="snack">
-      <ul class="snack_menu">
-        <li>숟가락</li>
-        <li>젓가락</li>
-        <li>포크</li>
-        <li>접시</li>
-        <li>종이컵</li>
-      </ul>
-      <ul class="snack_menu">
-        <li>부탄가스</li>
-        <li>이소가스</li>
-        <li>장작</li>
-      </ul>
-      <ul class="snack_menu">
-        <li>라면</li>
-        <li>과자</li>
-        <li>쌈장</li>
-        <li>햇반</li>
-      </ul>
-      <ul class="snack_menu">
-        <li>물</li>
-        <li>커피</li>
-        <li>술</li>
-        <li>탄산음료</li>
-        <li>얼음</li>
-      </ul>
+    <h3 class="titles">매점</h3>
+    <hr />
+    <div class="snack-list">
+      <span>숟가락</span>
+      <span>젓가락</span>
+      <span>포크</span>
+      <span>접시</span>
+      <span>종이컵</span>
+      <span>부탄가스</span>
+      <span>이소가스</span>
+      <span>장작</span>
+      <span>라면</span>
+      <span>과자</span>
+      <span>쌈장</span>
+      <span>햇반</span>
+      <span>물</span>
+      <span>커피</span>
+      <span>술</span>
+      <span>탄산음료</span>
+      <span>얼음</span>
     </div>
+    <hr />
+
     <div class="titles">바베큐</div>
     <div class="line"></div>
     <div class="bbq_box row">
